# showdown-bot

./: CMakeLists.txt  README.md  login.py  main.cpp  petitcup-config.ts  process_io.h  run_simulator.sh
config/: format_config.json  sample_team.txt  sample_team_packed.txt
include/: command_generator.h  event.h  parse_request.h  parse_text.h  pokemon_data.h  process_io.h  showdown-bot.code-workspace  util.h
